--- a/manual/ProgrammersManual.texinfo
+++ b/manual/ProgrammersManual.texinfo
@@ -5307,9 +5307,10 @@ section gives a complete list of such circumstances.
 @subsection Server Options Set in the Database
 
 Many optional behaviors of the server can be controlled from within the
-database by creating the property @code{#0.server_options} (also known as
-@code{$server_options}), assigning as its value a valid object number, and then
-defining various properties on that object.  At a number of times, the server
+database by creating the property @code{$server_options} 
+(i.e., @code{#0.server_options}), assigning as its value a valid object number, 
+and then defining various properties on that object.  
+At a number of times, the server
 checks for whether the property @code{$server_options} exists and has an object
 number as its value.  If so, then the server looks for a variety of other
 properties on that @code{$server_options} object and, if they exist, uses their
@@ -5420,16 +5421,16 @@ prudent for it to do so at regular intervals, just in case something untoward
 happens.
 
 To determine how often to make these @dfn{checkpoints} of the database, the
-server consults the value of @code{#0.dump_interval}.  If it exists and its
+server consults the value of @code{$dump_interval}.  If it exists and its
 value is an integer greater than or equal to 60, then it is taken as the number
 of seconds to wait between checkpoints; otherwise, the server makes a new
 checkpoint every 3600 seconds (one hour).  If the value of
-@code{#0.dump_interval} implies that the next checkpoint should be scheduled at
+@code{$dump_interval} implies that the next checkpoint should be scheduled at
 a time after 3:14:07 a.m. on Tuesday, January 19, 2038, then the server instead
 uses the default value of 3600 seconds in the future.
 
 The decision about how long to wait between checkpoints is made again
-immediately after each one begins.  Thus, changes to @code{#0.dump_interval}
+immediately after each one begins.  Thus, changes to @code{$dump_interval}
 will take effect after the next checkpoint happens.
 
 Whenever the server begins to make a checkpoint, it makes the following verb
@@ -5656,7 +5657,7 @@ the remainder of the builtin parsing process is invoked.
 
 Whenever the server is booted, there are a few tasks it runs right at the
 beginning, before accepting connections or getting the value of
-@code{#0.dump_interval} to schedule the first checkpoint (see below for more
+@code{$dump_interval} to schedule the first checkpoint (see below for more
 information on checkpoint scheduling).
 
 First, the server calls @code{$user_disconnected()} once for each user who
@@ -6121,9 +6122,23 @@ server's standard input and output streams.
 
 @bye
 
-@c $Id: ProgrammersManual.texinfo,v 1.2 2004-06-02 08:04:43 wrog Exp $
+@c $Id: ProgrammersManual.texinfo,v 1.3 2004-06-02 21:49:02 wrog Exp $
 
 @c $Log: not supported by cvs2svn $
+@c Revision 1.2  2004/06/02 08:04:43  wrog
+@c first 1.8.1 version
+@c introduce date and version macros
+@c remove xerox/at&t references
+@c clean up builtin parser description to mention .flush/oob/read()/.program/PREFIX in the proper order
+@c split off Server Statistics from Administrative node
+@c reordered Server Builtins node to include oob processing,
+@c new node on $do_command/$do_out_of_band_command under Server Assumptions
+@c put deprecation warnings on PREFIX/SUFFIX
+@c another try at cleaning up description of protected properties/functions
+@c entirely new section on compilation options
+@c entirely new section on server command line options
+@c entirely new section on emergency mode
+@c
 @c Revision 1.1.1.2  2004/05/31 07:04:26  wrog
 @c eostrom last version
 @c
