--- a/manual/ProgrammersManual.texinfo
+++ b/manual/ProgrammersManual.texinfo
@@ -290,6 +290,7 @@ MOO strings may not include special ASCII characters like carriage-return,
 line-feed, bell, etc.  The only non-printing characters allowed are spaces and
 tabs.
 
+@anchor{note-Binary Strings}
 @quotation
 @emph{Fine point:} There is a special kind of string used for representing the
 arbitrary bytes used in general, binary input and output.  In a @dfn{binary
@@ -3241,8 +3242,8 @@ contains an integer only for each non-printing, non-space byte; all other
 characters are grouped into the longest possible contiguous substrings.  If
 @var{fully} is provided and true, the list contains only integers, one for each
 byte represented in @var{bin_string}.  Raises @code{E_INVARG} if
-@var{bin_string} is not a properly-formed binary string.  (See the early
-section on MOO value types for a full description of binary strings.)
+@var{bin_string} is not a properly-formed binary string.
+(@xref{note-Binary Strings,,fine point on binary strings}, for a full description of binary strings.)
 
 @example
 decode_binary("foo")            @result{}   @{"foo"@}
@@ -3257,8 +3258,8 @@ decode_binary("foo~0D~0A", 1)   @result{}   @{102, 111, 111, 13, 10@}
 Each argument must be an integer between 0 and 255, a string, or a list
 containing only legal arguments for this function.  This function translates
 each integer and string in turn into its binary string equivalent, returning the
-concatenation of all these substrings into a single binary string.  (See the
-early section on MOO value types for a full description of binary strings.)
+concatenation of all these substrings into a single binary string.  
+(@xref{note-Binary Strings,,fine point on binary strings}, for a full description of binary strings.)
 
 @example
 encode_binary("~foo")                     @result{}   "~7Efoo"
@@ -4397,55 +4398,121 @@ connections and, thus, useless.
 @deftypefun none set_connection_option (obj @var{conn}, str @var{option}, @var{value})
 Controls a number of optional behaviors associated the connection @var{conn}.
 Raises @code{E_INVARG} if @var{conn} does not specify a current connection and
-@code{E_PERM} if the programmer is neither @var{conn} nor a wizard.  The
-following values for @var{option} are currently supported:
+@code{E_PERM} if the programmer is neither @var{conn} nor a wizard.  
+Unless otherwise specified below, options can only be set (@var{value} is true) 
+or unset (otherwise).
+The following values for @var{option} are currently supported:
 
 @table @code
 @item binary
-If @var{value} is true, then both input from and output to @var{conn} can
+When set, the connection is in @dfn{binary mode}, 
+in which case both input from and output to @var{conn} can
 contain arbitrary bytes.  Input from a connection in binary mode is not broken
-into lines at all; it is delivered to either the read() function or the
-built-in command parser as @dfn{binary strings}, in whatever size chunks come
-back from the operating system.  (See the early section on MOO value types for
-a description of the binary string representation.)  For output to a connection
-in binary mode, the second argument to `notify()' must be a binary string; if
-it is malformed, E_INVARG is raised.
+into lines at all; it is delivered to either the read() function or 
+normal command parsing as @dfn{binary strings}, in whatever size chunks come
+back from the operating system.  
+(@xref{note-Binary Strings,,fine point on binary strings},
+for a description of the binary string representation.)
+For output to a connection in binary mode, 
+the second argument to `notify()' must be a binary string; 
+if it is malformed, E_INVARG is raised.
+
+@quotation
+@emph{Fine point:}
+If the connection mode is changed at any time 
+when there is pending input on the connection, 
+said input will be delivered as per the previous mode
+(i.e., when switching out of binary mode,
+there may be pending ``lines'' containing tilde-escapes 
+for embedded linebreaks, tabs, tildes and other characters; 
+when switching into binary mode, 
+there may be pending lines containing raw tabs and from which 
+nonprintable characters have been silently dropped as per normal mode.
+Only 
+during the initial invocation of @code{$do_login_command()} on an incoming connection 
+or
+immediately after the call to @code{open_network_connection()} that creates an outgoing connection
+is there guaranteed not to be pending input.  
+At other times you will probably want to flush any pending input 
+immediately after changing the connection mode.
+@end quotation
 
 @item hold-input
-If @var{value} is true, then input received on @var{conn} will not be treated
-as a command; instead, it will remain in the queue until it is retrieved by a
-call to @code{read()} or this connection option is set false, in which case
-command processing resumes.  Processing of binary and out-of-band input lines
-are unaffected by this option.
+When set, no input received on @var{conn} will be treated as a command; 
+instead, all input remains in the queue until retrieved by calls to
+@code{read()} or until this connection option is unset, 
+at which point command processing resumes.
+Processing of out-of-band input lines is unaffected by this option.
 
 @item disable-oob
-Out-of-band input processing is disabled or enabled if @var{value} is true or
-false, respectively.
+When set, disables all out of band processing (@pxref{Out-of-band Processing}).
+All subsequent input lines until the next command that unsets this
+option will be made available for reading tasks or normal command parsing
+exactly as if the out-of-band prefix and the out-of-band quoting prefix had not
+been defined for this server.
 
 @item client-echo
-Send the Telnet Protocol @samp{WONT ECHO} or @samp{WILL ECHO} command,
-depending on whether @var{value} is true or false, respectively.  For clients
+The setting of this option is of no significance to the server.
+However calling @code{set_connection_option()} for this option
+sends the Telnet Protocol @samp{WONT ECHO} or @samp{WILL ECHO}
+according as @var{value} is true or false, respectively.  For clients
 that support the Telnet Protocol, this should toggle whether or not the client
 echoes locally the characters typed by the user.  Note that the server itself
 never echoes input characters under any circumstances.  (This option is only
 available under the TCP/IP networking configurations.)
 
 @item flush-command
-If @var{value} is a non-empty string, then it becomes the new @dfn{flush}
+This option is string-valued.
+If the string is non-empty, then it is the @dfn{flush}
 command for this connection, by which the player can flush all queued input
-that has not yet been processed by the server.  If @var{value} is not a
-non-empty string, then @var{conn} is set to have no flush command at all.  The
-default value of this option can be set via the property
-@code{$server_options.default_flush_command}; see the chapter on server
-assumptions about the database for details.
+that has not yet been processed by the server.
+If the string is empty, then @var{conn} has no flush command at all.  
+@code{set_connection_option} also allows specifying a non-string @var{value}
+which is equivalent to specifying the empty string.
+The default value of this option can be set via the property
+@code{$server_options.default_flush_command};
+see @ref{Flushing,,Flushing Unprocessed Input} for details.
 
 @item intrinsic-commands
-If @var{value} is a list, then it may contain any or none of the ``intrinsic''
-commands as strings.  For more details, see @ref{Server,,Server Commands and Database Assumptions}.
+This option value is a list of strings, 
+each being the name of one of the available server intrinsic commands
+(@pxref{Server Builtins,,Command Lines That Receive Special Treatment}).
+Commands not on the list are disabled, i.e., treated as normal MOO commands
+to be handled by @code{$do_command} and/or the built-in command parser
 
-If @var{value} is an integer, all intrinsic commands are enabled (the default
-condition) or disabled, depending on whether @var{value} is true or false,
-respectively.
+@code{set_connection_option} also allows specifying an integer @var{value}
+which, if zero, is equivalent to specifying the empty list,
+and otherwise is taken to be the list of all available intrinsic commands
+(the default setting).
+
+@need 1000
+Thus, one way to make the verbname @samp{PREFIX} available as an ordinary
+command is as follows:
+
+@example
+  set_connection_option(
+      player, "intrinsic-commands",
+      setremove(connection_option(player,
+                                  "intrinsic-commands"),
+                "PREFIX"));
+
+@end example
+
+Note that @code{connection_option()} always returns the list, 
+even if @code{set_connection_option} was previously called with a numeric value.
+Thus,
+
+@example
+  save = connection_option(player,"intrinsic-commands");
+  set_connection_option(player, "intrinsic-commands, 1);
+  full_list = connection_option(player,"intrinsic-commands");
+  set_connection_option(player,"intrinsic-commands", save);
+  return full_list;
+@end example
+
+@noindent
+is a way of getting the full list of intrinsic commands available in the server
+while leaving the current connection unaffected.
 @end table
 @end deftypefun
 
@@ -4482,7 +4549,7 @@ naming a host (possibly using the numeric Internet syntax) and an integer
 specifying a TCP port.  If a connection cannot be made because the host does
 not exist, the port does not exist, the host is not reachable or refused the
 connection, @code{E_INVARG} is raised.  If the connection cannot be made for
- other reasons, including resource limitations, then @code{E_QUOTA} is raised.
+other reasons, including resource limitations, then @code{E_QUOTA} is raised.
 
 Beginning with version 1.8.2, an optional third argument may be supplied,
 @code{listener} must be an object, whose listening verbs will be called at
@@ -4811,8 +4878,8 @@ Suspending a task does not change its task id.  A task can be suspended again
 and again by successive calls to @code{suspend()}.
 
 By default, there is no limit to the number of tasks any player may suspend,
-but such a limit can be imposed from within the database.  See the chapter on
-server assumptions about the database for details.
+but such a limit can be imposed from within the database.  
+@xref{Controlling Tasks,,Controlling the Execution of Tasks}, for details.
 @end deftypefun
 
 @deftypefun none resume (int @var{task-id} [, @var{value}])
@@ -5114,28 +5181,53 @@ are initially given no flush command at all.
 
 It is possible to compile the server to recognize an
 @dfn{out-of-band prefix}
-for input lines.  This is a string
+and an @dfn{out-of-band quoting prefix} for input lines.  These are strings
 that the server will check for at the beginning of every unflushed line of
 input from a non-binary connection, regardless of
 whether or not a player is logged in and regardless of whether or not
-reading tasks are waiting for input on that connection.
+reading tasks are waiting for input on that connection.  
+
+This check can be disabled entirely by setting connection option
+@code{"disable-oob"}, in which case none of the rest of this section applies,
+i.e., all subsequent unflushed lines on that connection will be available
+unchanged for reading tasks or normal command parsing.
+
+@subsubheading Quoted Lines
+
+We first describe how to ensure that a given input line will @emph{not} be
+processed as an out-of-band command.
+
+If a given line of input begins with the defined out-of-band quoting prefix
+(@samp{#$"} by default), that prefix is stripped.  The resulting line is then
+available to reading tasks or normal command parsing in the usual way,
+even if said resulting line now happens to begin with either the out-of-band
+prefix or the out-of-band quoting prefix.
+
+For example, if a player types
+
+@example
+#$"#$#mcp-client-set-type fancy
+@end example
+
+the server would behave exactly as if connection option @code{"disable-oob"}
+were set true and the player had instead typed
+
+@example
+#$#mcp-client-set-type fancy
+@end example
+
+@subsubheading Commands
 
 If a given line of input begins with the defined out-of-band prefix 
 (@samp{#$#} by default), then it is not treated as a normal command or given as
 input to any reading task.  Instead, the line is parsed into a list of words in
-the usual way and those words are given as the arguments in a forked call to
-@code{$do_out_of_band_command()}.
+the usual way and those words are given as the arguments in a call to
+@code{$do_out_of_band_command()}.  
 
 If this verb does not exist or is not executable, 
 the line in question will be @emph{completely ignored}.
 
-You may also define an @dfn{out-of-band quote prefix} (@samp{#$"} by default);
-any lines that begin with this prefix will be stripped of the prefix and
-handled normally, even if the resulting line begins with the out-of-band
-prefix.  This provides a means of quoting lines that would otherwise trigger
-@code{$do_out_of_band_command()}.
-
-For example, with the default prefixes, the line of input
+For example, with the default out-of-band prefix, the line of input
 
 @example
 #$#mcp-client-set-type fancy
@@ -5147,17 +5239,6 @@ would result in the following call being made in a new server task:
 @example
 $do_out_of_band_command("#$#mcp-client-set-type", "fancy")
 @end example
-
-@noindent
-and the line of input
-
-@example
-#$"#$#mcp-client-set-type fancy
-@end example
-
-@noindent
-would result in the text @samp{#$#mcp-client-set-type fancy} being handled
-normally, as a command or input to a reading task.
 
 During the call to @code{$do_out_of_band_command()}, the variable @code{player}
 is set to the object number representing the player associated with the
@@ -5667,7 +5748,7 @@ the @code{-e} command line option.  @xref{Emergency Mode,,Emergency Wizard Mode}
 
 @subsubheading $do_out_of_band_command
 
-On any connection,
+On any connection for which the connection-option @code{disable-oob} has not been set,
 any unflushed incoming lines that begin with the out-of-band prefix will be treated as out-of-band commands,
 meaning that if the verb @code{$do_out_of_band_command()} exists and is executable,
 it will be called for each such line.
@@ -5974,6 +6055,14 @@ when no @var{port-number} argument is given on the command line.
 when no @var{connect-file-name} is given on the command line.
 @item OUTBOUND_NETWORK
 The server will include support for @code{open_network_connection()} if this constant is defined.
+If given a zero value, the function will be disabled by default 
+and @samp{+O} will need to be specified on the command line in order to enable it, 
+otherwise (nonzero or blank value) the function is enabled by default
+and @samp{-O} will needed to disable it.
+
+When disabled or not supported, @code{open_network_connection()} 
+raises @code{E_PERM} whenever it is called.
+
 The @code{NETWORK_PROTOCOL} must be @code{NP_TCP}.
 @item MAX_QUEUED_OUTPUT
 The maximum number of output characters the server is
@@ -5995,6 +6084,10 @@ Specifies the out-of-band prefix.  If this is defined as a non-empty string, the
 input from any player that begin with that prefix will not be consumed by reading tasks
 and will not undergo normal command parsing.
 @xref{Out-of-band Processing,OOB,Out-of-band Processing}.
+@item OUT_OF_BAND_QUOTE_PREFIX
+Specifies the out-of-band quoting prefix.  If this is defined as a non-empty string, then any lines of
+input from any player that begin with that prefix will have that prefixed stripped 
+and the resulting string will bypass @ref{Out-of-band Processing}.
 @end table
 
 @noindent
@@ -6046,17 +6139,6 @@ This specifies that, once the database is loaded,
 Emergency Wizard Mode will be entered 
 before starting any tasks 
 or doing the initial listen to accept connections.
-
-@item -a @var{source-address}
-(Optional)
-This specifies a network interface (for a server compiled to use TCP/IP
-networking) to listen on.
-If this option is not given, the server will listen on all interfaces.
-
-@item +O/-O
-(Optional)
-Enable or disable outbound networking, respectively.  These override the
-compile-time default set in @samp{options.h}.
 @end table
 
 @subsubheading Database Arguments
@@ -6087,10 +6169,49 @@ If no connect file name is specfied, the compiled-in value of @code{DEFAULT_CONN
 For a server compiled for general TCP/IP connections (@code{NP_TCP}), we have
 
 @table @code
-@item @var{port-number}
+@item -p @var{port-number}
 (Optional)
 This specifies an initial port at which to listen for connections once the server successfully starts.
 If no port number is specfied, the compiled-in value of @code{DEFAULT_PORT} is used.
+
+For the sake of backwards compatibility with prior server versions, the @code{-p} may be omitted.
+
+@item -a @var{n.n.n.n}
+
+This specifies a local IP address to bind for all listening and all outgoing
+connection attempts.  @var{n.n.n.n} must be a valid numeric IP address assigned
+to one of the local host's network interfaces.
+If no specific IP address is specified, any listening (be this the initial
+listen implicit in server startup or any explicit listening invoked by the
+@code{listen()} function) will bind to all IP addresses on all available
+network interfaces; likewise outgoing connection attempts will use whatever
+address is available.
+
+This is how, on a host with multiple network interfaces, one makes the server
+be visible only on one of them.  
+At present, there is no way to specify that the server should bind to a subset
+of of the available IP addresses having more than one address but less than the
+entire set available.
+However, if the operating system offers port-forwarding and network address
+translation facilities, one can likely use those to achieve a similar effect.
+
+Note that even on hosts with only a single physical network interface, there
+will typically be multiple logical ones.
+One may, for example, specify the loopback address (usually @code{127.0.0.1}),
+forcing the server to use the loopback interface for all connections, thus
+guaranteeing that only local connections, whether incoming or outgoing, will be
+possible (and thus acheiving most of the safety of @code{NP_LOCAL} or
+@code{NP_SINGLE} without needing specialized clients).
+
+@item +O
+Explicitly enables @code{open_network_connection()} 
+but only if the server has been compiled to include support for this function
+(i.e., @code{OUTBOUND_NETWORK} has been @code{#define}d).
+
+@item -O
+Explicitly disables @code{open_network_connection()}.  
+Any calls to this function will raise @code{E_PERM} 
+even if the server has been compiled to support it.
 @end table
 
 @node Emergency Mode, , Run Options, Configuration
@@ -6191,9 +6312,12 @@ server's standard input and output streams.
 
 @bye
 
-@c $Id: ProgrammersManual.texinfo,v 1.4 2006-09-23 15:01:38 pschwan Exp $
+@c $Id: ProgrammersManual.texinfo,v 1.5 2006-09-29 04:56:42 wrog Exp $
 
 @c $Log: not supported by cvs2svn $
+@c Revision 1.4  2006/09/23 15:01:38  pschwan
+@c Manual updates in preparation for a 1.8.2 release
+@c
 @c Revision 1.3  2004/06/02 21:49:02  wrog
 @c changed a few #0.s -> $s
 @c
